# codegen-repro

./: .gitignore  README.md  WORKSPACE  maven-annotation-processing.txt  pom.xml
java/com/pettermahlen/: BUILD.bazel  Test.kt
