load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "repro",
    srcs = glob([
          "**/*.kt",
    ]),
    plugins = [
            "//third_party/moshi_kotlin_codegen:moshi_kotlin_codegen_plugin",
    ],
    deps = [
        "@maven//:com_squareup_moshi_moshi",
    ],
)
